# iris

./: LICENSE  README.md  index.html  pyproject.toml
blender/lego/: Lego_demo.blend  script.py
docs/: installation.md
iris/: exporter.py  iris_config.py  iris_model.py  iris_pipeline.py  iris_trainer.py  render.py
iris/data/: datamanagers.py  dataparsers.py  utils.py
iris/editing/: prepare_edits.py
iris/field/: encodings.py  field.py  mlp.py
iris/sampler/: build_optix.sh  build_sampler.sh  optix_sampler.py  sampler_algorithms.py  shaders_Sample.ptx  test.py  utils.py
iris/sampler/csrc/: CPyOptiXGENIERenderer.cpp  CPyOptiXGENIERenderer.cu  CPyOptiXGENIERenderer.h  Header.cuh  constants.h  shaders_Sample.cu
iris/scripts/: eval.py
iris/utils/: load_deformed.py  losses.py  ply_utils.py  schedulers.py  utils.py  viewer_utils.py
