[project]
name = "nerfstudio-iris"
description = "Intersection-aware Ray-based Implicit Editable Scenes"
version = "0.1.0"

[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"

dependencies = [
    "nerfstudio >= 0.3.0",
    "pybind11"
    ] 

[tool.setuptools.packages.find]
include = ["iris*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
iris = 'iris.iris_config:iris'
iris-real = 'iris.iris_config:iris_real'

[project.scripts]
# Note, add entrypoint name to nerfstudio/scripts/completions/install.py to include CLI completion
iris-export = 'iris.exporter:entrypoint'
iris-render = 'iris.render:entrypoint'